--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,25 @@
 }
 .page-container .home-container . container .comp-container{
      Width:100%;
-     Height: 100vh;
-     Display: Flex;
+     Height: 100vh;Display: Flex;
      Flex-direction: column;
      Justify-content: center;
      Align-item: center;
-
+}
+.page-container .home-container . container .comp-container .works-cover{
+     Width:100%;
+     Height: 100vh;
+}
+.page-container .home-container . container .comp-container .works-cover .works-img{
+      Width:50%;
+     Height: 100vh;
+}
+.page-container .home-container .container .comp-container .objects {
+      Width:100%;
+     Height: 100vh;
+}
+.page-container .home-container .container .comp-container .objects .blanket-img{
+      Width:50%;
+     Height: 100vh;
 }
 }
